--- a/i3wm/.config/i3/config
+++ b/i3wm/.config/i3/config
@@ -591,3 +591,5 @@ bindsym $mod+t exec --no-startup-id rofi -show window \
 #exec --no-startup-id greenclip daemon>/dev/null
 #bindsym $mod+c exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard \
 #		-config ~/.config/rofi/rofidmenu.rasi
+
+bindsym $mod+Shift+s exec --no-startup-id flameshot gui
