--- a/i3wm/.config/i3/config
+++ b/i3wm/.config/i3/config
@@ -359,6 +359,8 @@ for_window [class=TelegramDesktop] focus
 # For modifications, it can be copied to ~/.config/picom/picom.conf or ~/.config/picom.conf
 # install picom package (yay -S picom)
 # start using default config 
+exec --no-startup-id sudo systemctl start bluetooth
+
 exec_always --no-startup-id picom -b --config ~/.config/picom.conf
 #
 # for custom config:
