--- a/i3wm/.config/i3/config
+++ b/i3wm/.config/i3/config
@@ -397,9 +397,15 @@ exec --no-startup-id dex --autostart --environment i3
 # uncomment the next line, use arandr to setup displays and save the file as monitor:
 exec --no-startup-id ~/.screenlayout/display.sh
 
+#start noisetorch
+exec --no-startup-id /usr/bin/noisetorch --no-daemon
+
+#start bluetooth Z407
+exec --no-startup-id bluetoothctl power on && bluetoothctl agent on && bluetoothctl default-agent && bluetoothctl connect EC:81:93:95:8D:F9
+
 # set wallpaper
 # exec --no-startup-id sleep 2 && nitrogen --restore
-exec --no-startup-id sleep 1 && feh --bg-fill /home/joker__98/Pictures/arch1.jpg
+exec --no-startup-id sleep 1 && feh --bg-fill /home/joker__98/Pictures/blackArch.png
 
 # set powersavings for display:
 exec --no-startup-id xset s 480 dpms 600 600 600
